--- a/container/lint/Dockerfile
+++ b/container/lint/Dockerfile
@@ -10,7 +10,7 @@ RUN apt-get update && \
     ca-certificates \
     software-properties-common
 
-#Add repos and install Go, Docker and Bazel
+#Add repos and install Go lint and shellcheck
 RUN add-apt-repository -y ppa:longsleep/golang-backports && \
     apt-get update && apt-get install -y \
     golang-go \
@@ -21,7 +21,7 @@ ENV GOPATH=/data/go
 ENV PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/data/go/bin
 
 
-#Install Golang dep, operator-sdk, Kubectl, Kustomize and kubebuilder
+#Install Golang dep and go sec
 RUN curl -LO https://raw.githubusercontent.com/golang/dep/master/install.sh && \
     mkdir -p /data/go/bin && chmod +x install.sh && ./install.sh && rm install.sh && \
     mv /data/go/bin/dep /usr/local/bin && \
