Renovate bot will automatically assign two people to review a PR

--- a/renovate.json
+++ b/renovate.json
@@ -45,5 +45,9 @@
       "depNameTemplate": "kubernetes-sigs/cri-tools",
       "datasourceTemplate": "github-tags"
     }
-  ]
+  ],
+  "assigneesFromCodeOwners": true,
+  "assigneesSampleSize": 1,
+  "reviewersFromCodeOwners": true,
+  "reviewersSampleSize": 1
 }
