Fix bug that all users in the owner list are asked for review

--- a/renovate.json
+++ b/renovate.json
@@ -46,8 +46,6 @@
       "datasourceTemplate": "github-tags"
     }
   ],
-  "assigneesFromCodeOwners": true,
-  "assigneesSampleSize": 1,
-  "reviewersFromCodeOwners": true,
-  "reviewersSampleSize": 1
+  "assignees": ["kashifest", "fmuyassarov","furkatgofurov7", "Xenwar", "smoshiur1237", "macaptain", "jan-est", "namnx228"],
+  "assigneesSampleSize": 2
 }
