--- a/capo/Makefile
+++ b/capo/Makefile
@@ -1,16 +1,18 @@
 
 SHELL := /bin/bash
 CLUSTER_NAME := basic-1
+OS_CLOUD_NAME := "openstack-1"
+KIND_CLUSTER := "kind-capo"
 all: configure kind-create tilt-up 
 provision: capo-template capo-apply
 configure:
-	./configure.sh
+	./configure.sh $(OS_CLOUD_NAME)
 kind-create:
-	kind get clusters | grep -q kind-capo || kind create cluster --name kind-capo
+	kind get clusters | grep -q $(KIND_CLUSTER) || kind create cluster --name $(KIND_CLUSTER)
 tilt-up:
 	./tilt_up.sh
 capo-template:
-	./clusterctl_template.sh $(CLUSTER_NAME)
+	./clusterctl_template.sh $(CLUSTER_NAME) $(OS_CLOUD_NAME)
 capo-apply:
 	kubectl apply -f /tmp/$(CLUSTER_NAME).yaml
 capo-kubeconfig:
@@ -21,8 +23,14 @@ openstack:
 		-v /tmp/openstackrc:/tmp/openstackrc \
 		openstacktools/openstack-client \
 		/usr/bin/env BASH_ENV=/tmp/openstackrc /bin/bash -c openstack
+capo-e2e: $(eval OS_CLOUD_NAME="capo-e2e") configure capo-template
+	./run-e2e-test.sh
 deprovision:
-	kubectl delete cluster $(CLUSTER_NAME) --timeout=5m --ignore-not-found=true
+	kubectl delete cluster $(CLUSTER_NAME) --timeout=5m --ignore-not-found=true || echo "No cluster found"
 clean: deprovision
-	kind get clusters | grep -q kind-capo && kind delete cluster --name kind-capo
-	@echo Check there are no servers left over in OpenStack
+	kind get clusters | grep -q $(KIND_CLUSTER) && kind delete cluster --name $(KIND_CLUSTER)
+	@echo Remove resources left over in OpenStack by running the os_cleanup target
+
+os_cleanup: $(eval KIND_CLUSTER="capo-e2e") clean
+	docker run --rm -v /tmp:/tmp -v ${PWD}:/workdir openstacktools/openstack-client \
+        bash -c "source /tmp/openstackrc && source /workdir/clean-os-resources.sh"
