--- a/capo/Makefile
+++ b/capo/Makefile
@@ -1,14 +1,12 @@
-
 SHELL := /bin/bash
 CLUSTER_NAME := basic-1
 OS_CLOUD_NAME := "openstack-1"
-KIND_CLUSTER := "kind-capo"
 all: configure kind-create tilt-up 
 provision: capo-template capo-apply
 configure:
 	./configure.sh $(OS_CLOUD_NAME)
 kind-create:
-	kind get clusters | grep -q $(KIND_CLUSTER) || kind create cluster --name $(KIND_CLUSTER)
+	kind get clusters | grep -q kind-capo || kind create cluster --name kind-capo
 tilt-up:
 	./tilt_up.sh
 capo-template:
@@ -23,14 +21,10 @@ openstack:
 		-v /tmp/openstackrc:/tmp/openstackrc \
 		openstacktools/openstack-client \
 		/usr/bin/env BASH_ENV=/tmp/openstackrc /bin/bash -c openstack
-capo-e2e: $(eval OS_CLOUD_NAME="capo-e2e") configure capo-template
-	./run-e2e-test.sh
 deprovision:
 	kubectl delete cluster $(CLUSTER_NAME) --timeout=5m --ignore-not-found=true || echo "No cluster found"
 clean: deprovision
-	kind get clusters | grep -q $(KIND_CLUSTER) && kind delete cluster --name $(KIND_CLUSTER)
-	@echo Remove resources left over in OpenStack by running the os_cleanup target
-
-os_cleanup: $(eval KIND_CLUSTER="capo-e2e") clean
-	docker run --rm -v /tmp:/tmp -v ${PWD}:/workdir openstacktools/openstack-client \
-        bash -c "source /tmp/openstackrc && source /workdir/clean-os-resources.sh"
+	kind get clusters | grep -q kind-capo && kind delete cluster --name kind-capo
+	@echo Remove resources left over in OpenStack by running the os_cleanup script
+capo-e2e: $(eval OS_CLOUD_NAME="capo-e2e") configure
+	./run-e2e-test.sh
