--- a/capo/e2e_os_vars.rc
+++ b/capo/e2e_os_vars.rc
@@ -8,6 +8,6 @@ export CONFORMANCE_WORKER_MACHINE_COUNT="1"
 export CONFORMANCE_CONTROL_PLANE_MACHINE_COUNT="1"
 export OPENSTACK_CLOUD_YAML_FILE='/tmp/clouds.yaml'
 
-export OPENSTACK_SSH_KEY_NAME="cluster-api-provider-openstack-sigs-k8s-io"
-export OPENSTACK_CLOUD="capo-e2e"
-export OPENSTACK_CLOUD_CACERT_B64="Cg=="
+export OPENSTACK_DNS_NAMESERVERS=8.8.8.8
+export OPENSTACK_FAILURE_DOMAIN=nova
+export OPENSTACK_EXTERNAL_NETWORK_ID=""
