--- a/renovate.json
+++ b/renovate.json
@@ -49,7 +49,6 @@
    "assignees": [
      "fmuyassarov",
      "furkatgofurov7",
-     "jan-est",
      "kashifest",
      "lentzi90",
      "macaptain",
@@ -58,8 +57,8 @@
      "Rozzii",
      "smoshiur1237",
      "Sunnatillo",
-     "wgslr",
-     "Xenwar"
+     "Xenwar",
+     "ren-yifei"
    ],
    "assigneesSampleSize": 2
  }
