Update reviewers list

--- a/renovate.json
+++ b/renovate.json
@@ -67,14 +67,11 @@
      "furkatgofurov7",
      "kashifest",
      "lentzi90",
-     "macaptain",
      "mboukhalfa",
-     "namnx228",
      "Rozzii",
      "smoshiur1237",
      "Sunnatillo",
-     "Xenwar",
-     "ren-yifei"
+     "adilGhaffarDev"
    ],
    "assigneesSampleSize": 2
  }
